--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -30,17 +30,18 @@ a:hover {
 }
 
 button {
-  background-color: var(--accent-200);
+  background-color: transparent;
   color: var(--text-100);
-  border: none;
+  border: 1px solid var(--text-100);
   padding: 10px 20px;
   border-radius: 5px;
   cursor: pointer;
 }
 
 button:hover {
-  background-color: var(--accent-100);
+  background-color: var(--text-100);
   color: var(--primary-100);
+  border-color: var(--primary-100);
 }
 
 button:disabled {
@@ -66,6 +67,7 @@ input:focus,
 textarea:focus {
   border-color: var(--accent-100);
   outline: none;
+  box-shadow: 0 0 5px var(--shadow-accent-100) !important;
 }
 
 .card {
@@ -187,7 +189,6 @@ nav a.active {
 
 /* ملف CSS عمومي، أو داخل component بطريقتك */
 
-
 .transition-icon {
   display: inline-block;
   transition: transform 0.4s ease;
@@ -198,22 +199,22 @@ nav a.active {
   transform: rotate(180deg);
 }
 
-nav{
+nav {
   box-shadow: 0 2px 5px var(--shadow-100);
 }
 
-.modal-backdrop{
+.modal-backdrop {
   z-index: 1;
 }
 
-.modal-content{
+.modal-content {
   background-color: var(--bg-200) !important;
   color: var(--text-100);
   border-radius: 10px;
   box-shadow: 0 2px 5px var(--shadow-200);
 }
 
-.modal-close{
+.modal-close {
   color: var(--text-100) !important;
   background-color: transparent !important;
   border: none !important;
@@ -221,11 +222,11 @@ nav{
   transition: color 0.3s ease;
 }
 
-.modal-close:hover{
+.modal-close:hover {
   color: red !important;
 }
 
-.modal-icon{
+.modal-icon {
   color: var(--text-100) !important;
   border: 1px solid var(--text-100) !important;
   width: 100px !important;
@@ -236,6 +237,50 @@ nav{
   align-items: center !important;
 }
 
-.modal-icon i{
+.modal-icon i {
   font-size: 2em !important;
+}
+
+.searchPage {
+  background-color: var(--bg-100-50);
+  -webkit-backdrop-filter: blur(5px);
+  backdrop-filter: blur(5px);
+  display: none;
+  z-index: 1000;
+}
+
+.product-card {
+  background-color: var(--bg-200);
+  color: var(--text-100);
+  border: 1px solid var(--primary-300);
+}
+
+.product-image img {
+  width: 100% !important;
+  height: auto !important;
+}
+
+.product-icon-wrapper {
+  position: absolute;
+  bottom: 1em;
+  right: 50%;
+  transform: translateX(50%);
+}
+
+.product-icon {
+  color: var(--text-100) !important;
+  background-color: var(--bg-200) !important;
+  width: 50px !important;
+  height: 50px !important;
+  border-radius: 50% !important;
+  transition: all 0.3s ease;
+  display: flex !important;
+  justify-content: center !important;
+  align-items: center !important;
+}
+
+.product-icon:hover {
+  background-color: var(--bg-300) !important;
+  color: var(--text-200) !important;
+  transform: scale(1.1);
 }
