--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -333,3 +333,11 @@ nav {
 .testimonialCard{
   min-height: max-content !important;
 }
+
+footer {
+  background-color: var(--bg-200);
+  color: var(--text-100) !important;
+  padding: 2em;
+  text-align: center;
+  border-top: 1px solid var(--primary-300);
+}
