--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -341,3 +341,41 @@ footer {
   text-align: center;
   border-top: 1px solid var(--primary-300);
 }
+
+.custom-modal {
+  position: sticky;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1050;
+}
+
+.custom-modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.5);
+}
+
+.custom-modal-content {
+  position: relative;
+  max-width: 600px;
+  margin: 5% auto;
+  background: #fff;
+  padding: 20px;
+  z-index: 1060;
+  border-radius: 8px;
+}
+
+.custom-modal-close {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  background: none;
+  border: none;
+  font-size: 2rem;
+  cursor: pointer;
+}
