--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -801,3 +801,56 @@ footer {
 .DetailsSlider {
   background-color: var(--bg-200);
 }
+
+.quickViewWrapper {
+  background-color: var(--bg-100-50);
+  z-index: 999999;
+}
+
+.quickView {
+  max-height: 500px;
+}
+
+.xmark {
+  z-index: 9999999;
+  background-color: var(--bg-100);
+  border-radius: 50%;
+  position: absolute;
+  top: 10px;
+  right: auto;
+  left: 20px;
+  padding: 5px;
+  cursor: pointer;
+}
+
+[dir="rtl"] .xmark {
+  right: 20px;
+  left: auto;
+}
+
+.quickViewDetails {
+  overflow: auto;
+  max-height: 600px;
+  transform: translateX(100%);
+  opacity: 0;
+  background-color: var(--bg-100);
+  transform: all 0.3s ease-in-out;
+}
+
+.quickViewDetails.show {
+  transform: translateX(0);
+  opacity: 1;
+}
+.quickView.row {
+  margin: 0 !important;
+}
+
+.quickViewRow {
+  padding: 0 !important;
+}
+
+.quickViewImage {
+  width: 100%;
+  height: 600px;
+  object-fit: cover;
+}
