--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -41,8 +41,8 @@ button {
 
 button:hover {
   background-color: var(--text-100) !important;
-  color: var(--primary-100) !important;
-  border-color: var(--primary-100) !important;
+  color: var(--bg-100) !important;
+  border-color: var(--bg-100) !important;
 }
 
 button:disabled {
@@ -125,7 +125,7 @@ option:hover {
 }
 
 nav {
-  background-color: var(--primary-100) !important;
+  background-color: var(--bg-200) !important;
   color: var(--text-100);
   padding: 10px;
   display: flex;
@@ -853,4 +853,19 @@ footer {
   width: 100%;
   height: 600px;
   object-fit: cover;
+}
+
+.swiper-button-prev,
+.swiper-button-next,
+.swiper-pagination {
+  color: var(--text-100) !important;
+}
+
+.swiper-pagination-bullet {
+  background-color: var(--text-100) !important;
+}
+
+.BestSeller,
+.rugs-section {
+  background-color: var(--bg-200);
 }
