--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -875,7 +875,101 @@ footer {
   background-repeat: repeat;
 }
 
-.registration-choice{
+.registration-choice {
   color: var(--text-200);
   cursor: pointer;
+}
+
+.dropdown [alt="User Avatar"],
+.fa-magnifying-glass,
+.fa-user {
+  cursor: pointer;
+}
+
+
+.modal-backdrop{
+  display: none !important;
+}
+
+.dropdown-item.active, .dropdown-item:active {
+  background-color: var(--bg-300) !important;
+  color: var(--text-100) !important;
+}
+
+.custom-modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.6);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+.custom-modal-content {
+  background: #fff;
+  border-radius: 10px;
+  width: 90%;
+  max-width: 500px;
+  overflow: hidden;
+}
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.5);
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  padding-top: 50px; /* بداية ال slide */
+  z-index: 9999;
+}
+
+.modal-container {
+  background: white;
+  width: 90%;
+  max-width: 500px;
+  border-radius: 8px;
+  overflow: hidden;
+  transition: transform 0.3s ease, opacity 0.3s ease;
+}
+
+/* عند الظهور: ينزل من فوق */
+.slide-down {
+  transform: translateY(-100%);
+  opacity: 0;
+  animation: slideDown 0.3s forwards;
+}
+
+/* عند الإغلاق: يطلع لفوق */
+.slide-up {
+  animation: slideUp 0.3s forwards;
+}
+
+@keyframes slideDown {
+  from {
+    transform: translateY(-100%);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes slideUp {
+  from {
+    transform: translateY(0);
+    opacity: 1;
+  }
+  to {
+    transform: translateY(-100%);
+    opacity: 0;
+  }
 }
